<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".Tanaman">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tanaman"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="5dp"/>

            <ImageButton
                android:id="@+id/backtanaman"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="200dp"
                android:background="@color/black"
                android:src="@drawable/back"/>
        </LinearLayout>
        <ImageView
            android:layout_width="130dp"
            android:layout_height="8dp"
            android:layout_marginTop="10dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/garis"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/tanaman"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_margin="8dp"
            android:layout_marginTop="10dp"
            android:gravity="start|end"
            android:text="@string/tanaman"
            android:textSize="15sp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/material_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="8dp"
                    android:orientation="horizontal"
                    android:background="@color/green">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:text="Tanaman Pangan"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/image_button"
                        android:src="@drawable/baseline_keyboard_arrow_down_24"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="172dp"
                        android:background="@android:color/transparent"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_expand"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="255dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/line"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/tanamanpangan"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/second_card_view"
            android:layout_below="@id/material_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="8dp"
                    android:orientation="horizontal"
                    android:background="@color/green">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:text="Tanaman Sayur" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/new_image_button"
                        android:src="@drawable/baseline_keyboard_arrow_down_24"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="185dp"
                        android:background="@android:color/transparent" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/new_layout_expand"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="160dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/line"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/tanamansayur" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/third_card_view"
            android:layout_below="@id/second_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="8dp"
                    android:orientation="horizontal"
                    android:background="@color/green">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:text="Tanaman Buah-buahan" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/third_image_button"
                        android:src="@drawable/baseline_keyboard_arrow_down_24"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="125dp"
                        android:background="@android:color/transparent" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/third_layout_expand"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="190dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/line"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/tanamanbuah" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Galeri Tanaman"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="5dp"/>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/garis"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:gravity="start|end"
            android:text="@string/galeritanaman"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="Tanaman Pangan"
                android:textColor="@android:color/black"
                android:onClick="onButtonClick"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="Tanaman Sayuran"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="Tanaman Buah-buahan"
                android:textColor="@android:color/black"
                android:onClick="onButtonClick"/>
        </LinearLayout>

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                android:layout_columnWeight="1"
                android:src="@drawable/gambartanam1"/>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                android:layout_columnWeight="1"
                android:src="@drawable/gambartanam2"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/gambartanam3"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:src="@drawable/gambartanam4" />
        </GridLayout>
    </LinearLayout>
</ScrollView>